ld/testsuite/ld-elf/group8a.d
@@ -1,0 +1,8 @@
+#source: group8.s
+#ld: -r --gc-sections --entry foo
+#readelf: -g --wide
+#notarget: ia64-*-*
+
+COMDAT group section \[[ 0-9]+\] `.group' \[foo\] contains 1 sections:
+   \[Index\]    Name
+   \[[ 0-9]+\]   .text.foo
